--- a/TecAirWebApp/app/airport/index.html
+++ b/TecAirWebApp/app/airport/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
- <html lang="es" ng-app="airport" class="no-js">
+ <html lang="es" ng-app="airport">
 <head>
+  <title>TECAirlines</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>TECAirlines</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="airport.css">
   <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
+
   <script src="../lib/bootstrap/js/bootstrap.js"></script>
-  <script src="../lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-  <script src="../lib/ui-bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
+  <script src="../lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+  <script src="../lib/angular/angular.js"></script>
+  <script src="../lib/angular-route/angular-route.js"></script>
+  <script src="../lib/angular-resource/angular-resource.js"></script>
+
+  <script src="airport.module.js"></script>
+  <script src="airport.config.js"></script>
+  <!-- <script src="view1/view1.js"></script>
+  <script src="view2/view2.js"></script> -->
+  <script src="../core/version/version.js"></script>
+  <script src="../core/version/version-directive.js"></script>
+  <script src="../core/version/interpolate-filter.js"></script>
 </head>
 <body>
-  <ul class="menu">
+  <!-- <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
   <div ng-view></div>
 
-  <div>TECAirlines app: v<span app-version></span></div>
+  <div>TECAirlines app: v<span app-version></span></div> -->
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="../lib/angular/angular.js"></script>
-  <script src="../lib/angular-route/angular-route.js"></script>
-  <script src="airport.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="../core/version/version.js"></script>
-  <script src="../core/version/version-directive.js"></script>
-  <script src="../core/version/interpolate-filter.js"></script>
 </body>
 </html>
