Homepage template added.

--- a/TecAirWebApp/app/client/client.template.html
+++ b/TecAirWebApp/app/client/client.template.html
@@ -1,1 +1,84 @@
-<p>Pagina principal</p>
+
+<div class="global-wrap">
+    <header id="main-header">
+        <div class="header-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <!-- <a class="logo" href="index.html">
+                            <img src="img/40x40.png" alt="Image Alternative text" title="Image Title" />
+                        </a> -->
+                    </div>
+                    <div class="col-md-3 col-md-offset-2">
+
+                    </div>
+                    <div class="col-md-4">
+                        <div class="top-user-area clearfix">
+                            <ul class="top-user-area-list list list-horizontal list-border">
+                                <li>
+                                    <!-- <a href="login-register.html"> -->
+                                        Inicar sesión / Registrarse
+                                    <!-- </a> -->
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="nav">
+                <ul class="slimmenu" id="slimmenu">
+                    <li class="active">
+                        <!-- <a href="index.html"> -->
+                            Inicio
+                        <!-- </a> -->
+                    </li>                        
+                    <li>
+                        <!-- <a href="buscar-vuelos.html"> -->
+                            Vuelos
+                        <!-- </a> -->
+                    </li>                                               
+                </ul>
+            </div>
+        </div>
+    </header>
+    <!-- TOP AREA -->
+    <!-- <div ng-view></div> -->
+    <!-- footer -->
+    <footer id="main-footer">
+        <div class="container">
+            <div class="row row-wrap">
+                <div class="col-md-3">
+                    <p class="mb20">Puedes seguirnos en nuestras redes sociales</p>
+                    <ul class="list list-horizontal list-space">
+                        <li>
+                            <a class="fa fa-facebook box-icon-normal round animate-icon-bottom-to-top" href="#"></a>
+                        </li>
+                        <li>
+                            <a class="fa fa-twitter box-icon-normal round animate-icon-bottom-to-top" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-3">
+                    
+
+                </div>
+                <div class="col-md-2">
+                    <ul class="list list-footer">
+                        <li><a href="#">Acerca de</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h4>¿Tienes preguntas?</h4>
+                    <h4 class="text-color">+506 8888-8888</h4>
+                    <h4><a href="#" class="text-color">soporte@tec-airlines.com</a></h4>
+                    <p>Soporte 24/7</p>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+</div>
