--- a/TecAirWebApp/app/index.html
+++ b/TecAirWebApp/app/index.html
@@ -45,8 +45,7 @@
   <body>
 
     <div ng-view></div>
-
-    <div>TECAirlines app: v<span app-version></span></div> 
+    <!-- <div>TECAirlines app: v<span app-version></span></div> -->
 
   </body>
 </html>
