--- a/TecAirWebApp/app/index.html
+++ b/TecAirWebApp/app/index.html
@@ -13,12 +13,13 @@
 
     <!-- Dependencies -->
     <script src="lib/jquery/dist/jquery.js"></script>
-    <!-- <script src="lib/bootstrap/dist/js/bootstrap.js"></script> -->
+    <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/angular-touch/angular-touch.js"></script>
+    <script src="lib/angular-sanitize/angular-sanitize.js"></script>
     <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
 
     <script src="global.module.js"></script>
