Web config added.

--- a/TecAirWebApp/app2/index.html
+++ b/TecAirWebApp/app2/index.html
@@ -31,10 +31,12 @@
   <script src="core/version/version.value.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
   <script src="core/version/version-directive.js"></script>
+  <script src="core/client/client.module.js"></script>
+  <script src="core/client/client.service.js"></script>
 
   <!-- Airport page/admin page -->
-  <!-- <script src="airport/airport.module.js"></script> -->
-  <!-- <script src="airport/airport.component.js"></script> -->
+  <script src="home/home.module.js"></script> 
+  <script src="home/home.component.js"></script>
   <!-- <script src="airport/airport.config.js"></script> -->
   <!-- <script src="airport/home/home.module.js"></script>
   <script src="airport/home/home.component.js"></script> -->
@@ -42,7 +44,8 @@
 
 <body>
   HOLA
-  <!-- <div ng-view></div> -->
+  Hola 
+  <div ng-view></div>
   <!-- <div>TECAirlines app: v<span app-version></span></div> -->
 
 </body>
