--- a/TecAirWebApp/app2/home/home.template.html
+++ b/TecAirWebApp/app2/home/home.template.html
@@ -3,8 +3,12 @@
     JAJA:
     <ul class="clients">
       <li ng-repeat="client in $ctrl.clients">
-        <p>{{client.NombreComb}}</p>
+        <p>{{client.NombreComp}}</p>
+        <p>{{client.Telefono}}</p>
+        <p>{{client.Correo}}</p>
+        <p>{{client.Estudiante}}</p> 
+        <p>{{client.Carne}}</p> 
+        <p>{{client.millasEstudiante}}</p> 
       </li>
     </ul>
-
 </div>
