Admin page home created and Angular-ui-router dep addded.

--- a/TecAirWebApp/app1/index.html
+++ b/TecAirWebApp/app1/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="appstyle.css">
+  <link rel="stylesheet" href="app.css">
 
   <!-- Dependencies -->
   <script src="lib/jquery/dist/jquery.js"></script>
