--- a/TecAirWebApp/app2/index.html
+++ b/TecAirWebApp/app2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" ng-app="root">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -42,107 +42,109 @@
   <script src="airport/home/home.component.js"></script> -->
 </head>
 
-<body>
+<body ng-app="root">
+  <div class="global-wrap">
   <!-- Navigation -->
-  <header id="main-header">
-    <div class="header-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-md-offset-2">
-                  <h3>TEC Airlines Admin</h3>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- <div class="container">
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Menu</a>
-            </div>
-            <div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
-                <ul class="nav navbar-nav">
-                    <li><a href="#!/tecairlines/home">
-                        Inicio
-                    </a></li>
-                    <li><a href="#">
-                        Vuelos
-                    </a></li>
-                </ul>
-            </div>
-        </nav>
-    </div> -->
-  </header>
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="/bombatica/home">Farmacias BombaTica</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/bombatica/home">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item" *ngIf="!loggedIn">
-          <a class="nav-link" routerLink="/bombatica/home/login">Login</a>
-        </li>
-        <li class="nav-item" *ngIf="!loggedIn">
-          <a class="nav-link" routerLink="/bombatica/home/register">Registrar</a>
-        </li>
-        <li class="nav-item" *ngIf="loggedIn">
-          <a class="nav-link" routerLink="/bombatica/home/user">Cuenta</a>
-        </li>
-        <li class="nav-item" *ngIf="loggedIn">
-          <a class="nav-link" (click)="logout()" href="/bombatica/home">Log out</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
-
-<!-- Page Content -->
-<div class="container">
-
-  <div class="row">
-
-    <div class="col-lg-3">
-
-      <div class="list-group">
-        <a href="#!/tecadmin/home" class="list-group-item" *ngIf="loggedIn">Inicio</a>
-        <a href="#" class="list-group-item" *ngIf="loggedIn">Tablas</a>
+    <header id="main-header">
+      <div class="header-top bg-primary">
+          <div class="container">
+              <div class="text-center text-white">
+                  <!-- <div class="col-lg-6 col-lg-offset-3"> -->
+                    <h2>TEC Airlines Admin</h2>
+                  <!-- </div> -->
+              </div>
+          </div>
       </div>
+      <!-- <div class="container">
+          <nav class="navbar navbar-default" role="navigation">
+              <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Menu</a>
+              </div>
+              <div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
+                  <ul class="nav navbar-nav">
+                      <li><a href="#!/tecairlines/home">
+                          Inicio
+                      </a></li>
+                      <li><a href="#">
+                          Vuelos
+                      </a></li>
+                  </ul>
+              </div>
+          </nav>
+      </div> -->
+    </header>
+
+    <div class="gap-mini"></div>
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="/bombatica/home">Farmacias BombaTica</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/bombatica/home">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item" *ngIf="!loggedIn">
+            <a class="nav-link" routerLink="/bombatica/home/login">Login</a>
+          </li>
+          <li class="nav-item" *ngIf="!loggedIn">
+            <a class="nav-link" routerLink="/bombatica/home/register">Registrar</a>
+          </li>
+          <li class="nav-item" *ngIf="loggedIn">
+            <a class="nav-link" routerLink="/bombatica/home/user">Cuenta</a>
+          </li>
+          <li class="nav-item" *ngIf="loggedIn">
+            <a class="nav-link" (click)="logout()" href="/bombatica/home">Log out</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav> -->
+
+    <!-- Page Content -->
+    <div class="container">
+
+      <div class="row">
+
+        <div  ng-if="loggedIn" class="col-md-3">
+
+          <div class="list-group">
+            <a href="#!/tecadmin/home" class="list-group-item" >Inicio</a>
+            <a href="#" class="list-group-item">Tablas</a>
+          </div>
+
+        </div>
+
+        <div class="col-md-9">
+
+          <div ng-view></div>
+
+        </div>
+        <!-- /.col-lg-9 -->
+
+      </div>
+      <!-- /.row -->
 
     </div>
-    <!-- /.col-lg-3 -->
+    <!-- /.container -->
 
-    <div class="col-lg-9">
-
-      <div ng-view></div>
-
-    </div>
-    <!-- /.col-lg-9 -->
-
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Homepage de la progra</p>
+        <p class="m-0 text-center text-white">TECAirlines app: v<span app-version></span></p>
+      </div>
+    </footer> 
   </div>
-  <!-- /.row -->
-
-</div>
-<!-- /.container -->
-
-<!-- Footer -->
-<footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Homepage de la progra</p>
-    <div> TECAirlines app: v<span app-version></span></div>
-  </div>
-</footer> 
-
 </body>
 </html>
