--- a/TecAirWebApp/app2/login/login.template.html
+++ b/TecAirWebApp/app2/login/login.template.html
@@ -45,9 +45,9 @@
       <label for="password">Password</label>
       <input type="password" class="form-control" id="password" placeholder="Contraseña" #passInput>
     </div>
-    <button type="submit" class="btn btn-primary" ng-click="$ctrl.submit()">Login</button>
+    <button type="submit" class="btn btn-primary" ng-click="login()">Login</button>
     <div>
-      <p>{{message}}</p>
+      <!-- <p>{{message}}</p> -->
     </div>
   </div> 
 
