--- a/TecAirWebApp/app2/dashboard/dashboard.template.html
+++ b/TecAirWebApp/app2/dashboard/dashboard.template.html
@@ -1,8 +1,10 @@
-<div class="row alerts-container" data-ng-show="alerts.length">
+<!-- <div class="row alerts-container" data-ng-show="alerts.length">
   <div class="col-xs-12">
-    <uib-alert data-ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
+    <div uib-alert data-ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" template-url="lib/angular-ui-bootstrap/template/alert/alert.html">
+		{{alert.msg}}
+	</div>
   </div>
-</div>
+</div> -->
 
 <div class="row">
 	<div class="col-lg-3 col-md-6 col-xs-12">
@@ -12,7 +14,7 @@
 					<i class="fa fa-users"></i>
 				</div>
 				<div class="title">80</div>
-				<div class="comment">Users</div>
+				<div class="comment">Ususarios</div>
 			</rd-widget-body>
 		</rd-widget>
 	</div>
@@ -23,7 +25,7 @@
 					<i class="fa fa-tasks"></i>
 				</div>
 				<div class="title">16</div>
-				<div class="comment">Servers</div>
+				<div class="comment">Vuelos</div>
 			</rd-widget-body>
 		</rd-widget>
 	</div>
@@ -33,8 +35,8 @@
 				<div class="widget-icon orange pull-left">
 					<i class="fa fa-sitemap"></i>
 				</div>
-				<div class="title">225</div>
-				<div class="comment">Documents</div>
+				<div class="title">8</div>
+				<div class="comment">Promociones</div>
 			</rd-widget-body>
 		</rd-widget>
 	</div>
@@ -45,7 +47,25 @@
 					<i class="fa fa-support"></i>
 				</div>
 				<div class="title">62</div>
-				<div class="comment">Tickets</div>
+				<div class="comment">Reservaciones</div>
+			</rd-widget-body>
+		</rd-widget>
+	</div>
+	<div class="col-lg-6 col-md-12 col-xs-12">
+		<rd-widget>
+			<rd-widget-body>
+				<div class="title"><a  href="#">
+					Check-In
+				</a></div>
+			</rd-widget-body>
+		</rd-widget>
+	</div>
+	<div class="col-lg-6 col-md-12 col-xs-12">
+		<rd-widget>
+			<rd-widget-body>
+				<div class="title"><a href="#">
+					Hacer una reservacion
+				</a></div>
 			</rd-widget-body>
 		</rd-widget>
 	</div>
@@ -113,7 +133,9 @@
 				</div>
 				<hr />
 				<div class="message">
-					<a href="http://angular-ui.github.io/bootstrap/" target="_blank">UI Bootstrap</a> is included, so you can use <a href="#" tooltip="I'm a tooltip!">tooltips</a> and all of the other native Bootstrap JS components!
+					<a href="http://angular-ui.github.io/bootstrap/" target="_blank">UI Bootstrap</a> is included, so you can use <a href="#" tooltip="I'm a tooltip!">
+						tooltips
+					</a> and all of the other native Bootstrap JS components!
 				</div>
    			</rd-widget-body>
    		</rd-widget>
