--- a/TecAirWebApp/app2/index.html
+++ b/TecAirWebApp/app2/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="root">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>TECAirlines Admin</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
@@ -36,6 +36,10 @@
   <script src="core/version/version-directive.js"></script>
   <script src="core/client/client.module.js"></script>
   <script src="core/client/client.service.js"></script>
+  <!-- Authenticarion -->
+  <script src="core/auth/auth.module.js"></script>
+  <!-- <script src="core/auth/principal.service.js"></script> -->
+  <script src="core/auth/auth.service.js"></script>
   <!-- Directives -->
   <script src="core/directives/directives.module.js"></script>
   <script src="core/directives/loading.directive.js"></script>
@@ -52,6 +56,13 @@
   <script src="login/login.component.js"></script>
   <script src="dashboard/dashboard.module.js"></script>
   <script src="dashboard/dashboard.component.js"></script>
+  <script src="flights/flights.module.js"></script>
+  <script src="flights/flights.component.js"></script>
+  <script src="new-flight/new-flight.module.js"></script>
+  <script src="new-flight/new-flight.component.js"></script>
+
+  <!-- <script>document.write('<base href="' + document.location + '" />');</script> -->
+  <!-- <base href="/"> -->
 </head>
 
 <body>
