Added various templates for admin page.

--- a/TecAirWebApp/app2/home/home.template.html
+++ b/TecAirWebApp/app2/home/home.template.html
@@ -39,10 +39,10 @@
         <a href="#">Promociones <span class="menu-icon fa fa-table"></span></a>
       </li>
       <li class="sidebar-list">
-        <a href="#">Usuarios <span class="menu-icon fa fa-table"></span></a>
+        <a href="#!/tecadmin/home/users">Usuarios <span class="menu-icon fa fa-table"></span></a>
       </li>
       <li class="sidebar-list">
-        <a href="#">Reservaciones <span class="menu-icon fa fa-table"></span></a>
+        <a href="#!/tecadmin/home/reservations">Reservaciones <span class="menu-icon fa fa-table"></span></a>
       </li>
     </ul>
     <div class="sidebar-footer">
