--- a/TecAirWebApp/app2/index.html
+++ b/TecAirWebApp/app2/index.html
@@ -60,6 +60,10 @@
   <script src="flights/flights.component.js"></script>
   <script src="new-flight/new-flight.module.js"></script>
   <script src="new-flight/new-flight.component.js"></script>
+  <script src="users/users.module.js"></script>
+  <script src="users/users.component.js"></script>
+  <script src="reservations/reservations.module.js"></script>
+  <script src="reservations/reservations.component.js"></script>
 
   <!-- <script>document.write('<base href="' + document.location + '" />');</script> -->
   <!-- <base href="/"> -->
