--- a/TecAirWebApp/app1/index.html
+++ b/TecAirWebApp/app1/index.html
@@ -9,18 +9,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="app.css">
 
   <!-- Dependencies -->
   <script src="lib/jquery/dist/jquery.js"></script>
   <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
   <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular-route/angular-route.js"></script>
   <script src="lib/angular-animate/angular-animate.js"></script>
   <script src="lib/angular-resource/angular-resource.js"></script>
   <script src="lib/angular-touch/angular-touch.js"></script>
   <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+  <script src="lib/angular-cookies/angular-cookies.js"></script>
   <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+  <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 
   <script src="app.module.js"></script>
   <script src="app.config.js"></script>
@@ -109,7 +111,7 @@
       </div>
     </header>
     
-    <div ng-view></div>
+    <div ui-view></div>
     
     <!-- holder -->
     <div class="bg-holder">
