--- a/TecAirWebApp/app2/dashboard/dashboard.template.html
+++ b/TecAirWebApp/app2/dashboard/dashboard.template.html
@@ -1,11 +1,3 @@
-<!-- <div class="row alerts-container" data-ng-show="alerts.length">
-  <div class="col-xs-12">
-    <div uib-alert data-ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" template-url="lib/angular-ui-bootstrap/template/alert/alert.html">
-		{{alert.msg}}
-	</div>
-  </div>
-</div> -->
-
 <div class="row">
 	<div class="col-lg-3 col-md-6 col-xs-12">
 		<rd-widget>
@@ -74,7 +66,7 @@
 <div class="row">
 	<div class="col-lg-6">
 		<rd-widget>
-      		<rd-widget-header icon="fa-tasks" title="Servers">
+      		<rd-widget-header icon="fa-tasks" title="Proximos vuelos">
 				<a href="#">Manage</a>
       		</rd-widget-header>
       		<rd-widget-body classes="medium no-padding">
@@ -82,7 +74,7 @@
 					<table class="table">
 						<tbody>
 							<tr><td>RDVMPC001</td><td>238.103.133.37</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
-							<tr><td>RDVMPC002</td><td>68.66.63.170</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
+							<!-- <tr><td>RDVMPC002</td><td>68.66.63.170</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
 							<tr><td>RDVMPC003</td><td>76.117.212.33</td><td><span tooltip="Server Down!" class="text-danger"><i class="fa fa-warning"></i></span></td></tr>
 							<tr><td>RDPHPC001</td><td>91.88.224.5</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
 							<tr><td>RDESX001</td><td>197.188.15.93</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
@@ -91,14 +83,14 @@
 							<tr><td>RDESX004</td><td>252.37.192.235</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
 							<tr><td>RDTerminal01</td><td>139.71.18.207</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
 							<tr><td>RDTerminal02</td><td>136.80.122.212</td><td><span tooltip="Could not connect!" class="text-warning"><i class="fa fa-flash"></i></span></td></tr>
-							<tr><td>RDDomainCont01</td><td>196.80.245.33</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
+							<tr><td>RDDomainCont01</td><td>196.80.245.33</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr> -->
 						</tbody>
 					</table>
 				</div>
 			</rd-widget-body>
 		</rd-widget>
 	</div>
-	<div class="col-lg-6">
+	<!-- <div class="col-lg-6">
 		<rd-widget>
 			<rd-widget-header icon="fa-users" title="Users">
 				<input type="text" placeholder="Search" class="form-control input-sm" />
@@ -118,10 +110,10 @@
         		</div>
 			</rd-widget-body>
 		<rd-widget>
-	</div>
+	</div> -->
 </div>
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-lg-6">
    		<rd-widget>
    			<rd-widget-header icon="fa-plus" title="Extras">
@@ -150,4 +142,4 @@
 			</rd-widget-body>
 		</rd-widget>
 	</div>
-</div>
+</div> -->
